--- a/CoreEF/appsettings.json
+++ b/CoreEF/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DB": "Server=(localdb)\\mssqllocaldb;Database=School;Trusted_Connection=True;",
+  "DB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\temp\\Backup\\CoreEF\\CoreEF\\Models\\DB\\Database1.mdf;Integrated Security=True",
   "exclude": [
     "**/bin",
     "**/bower_components",
